``` feat: 添加媒体存储和语音识别功能配置
- 在.gitignore中添加.history/、*.iml和.pnpm-store/忽略规则
- 为各环境配置文件(.env.dev.example、.env.example、.env.prod.example、.env.stg.example)
  添加SERVER_ADDRESS、MINIO_CREATE_BUCKET、媒体存储和ASR相关配置
- 更新数据库密码和JWT密钥等敏感配置示例
- 添加微信支付和支付宝支付相关配置选项
- 配置演示数据包括更多词汇项和对话材料

feat: 集成MinIO文件存储和ASR语音识别服务

- 在pom.xml中添加minio依赖和spring-boot-starter-aop依赖
- 配置@EnableScheduling注解启用任务调度功能
- 新增AUTH_CLIENT_NOT_ALLOWED错误码枚举
- 完善全局异常处理器，增加ResponseStatusException处理逻辑

feat: 完善后台管理系统的班级和对话内容管理功能

- 扩展DevAdminBootstrapRunner确保超级管理员角色和权限初始化
- 扩展DevStudentDemoBootstrapRunner添加对话材料演示数据
- 在SecurityConfig中允许媒体资源HEAD访问和支付通知接口POST访问
- 移除WebConfig中的静态资源配置（改为动态处理）
- 在AdminClassRoomManagementController中添加创建和更新班级接口
- 在AdminDialogueManagementController中添加批量绑定媒体资源接口

refactor: 优化开发环境演示数据初始化逻辑

- 集成视频材料、对话台词和词汇映射的演示数据生成
- 添加学习统计数据重建和排行榜刷新功能
- 统一各环境配置文件中的媒体存储和ASR配置结构
```