@@ -204,9 +204,11 @@ public class VocabService {
     private Map<Long, MediaAsset> loadMediaAssets(List<Long> ids) {
         List<Long> assetIds = ids.stream().filter(id -> id != null).distinct().toList();
         if (assetIds.isEmpty()) {
-            return Map.of();
+            return Collections.emptyMap();
         }
-        return mediaAssetMapper.selectBatchIds(assetIds)
+        return mediaAssetMapper.selectList(new LambdaQueryWrapper<MediaAsset>()
+                        .in(MediaAsset::getId, assetIds)
+                        .eq(MediaAsset::getStatus, "active"))
                 .stream()
                 .collect(Collectors.toMap(MediaAsset::getId, Function.identity()));
     }
